现在conditions可以使用完整的脚本语法进行编写